--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <td><img src="webpage-profile.jpg" alt="image cannot be displayed"></td>
       <td>
         <h1>Snehil Bhardwaj</h1>
-        <p><em>Stanford University</em></p>
-        <p>Honestly don't know what I'm doing in life.</p>
+        <p><em>National Institute of Technology</em></p>
+        <p>Information Technology Student</p>
       </td>
     </tr>
   </table>
@@ -31,7 +31,7 @@
   <ol>
     <li>Reading</li>
     <li>Music</li>
-    <li>Minecraft</li>
+    <li>Minecraft Game Development</li>
   </ol>
   <hr>
   <h3>Skills</h3>
