--- a/contact info.html
+++ b/contact info.html
@@ -13,13 +13,14 @@
   <li><strong>Email Address:</strong> snehil.bh@gmail.com</li>
   </ul>
   <hr>
-  <form action="">
-    <label>Name:</label>
+  <form action="mailto:snehil.bh@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
     <input type="text" name="yourName"><br>
-    <label>Email Address:</label>
-    <input type="text"><br>
-    <label>Message:</label><br>
-    <textarea name="name" rows="8" cols="80"></textarea>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail"><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="12" cols="45"></textarea><br>
+    <input type="submit">
   </form>
 
 
