--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td><img src="webpage-profile.jpg" alt="image cannot be displayed"></td>
       <td>
         <h1>Snehil Bhardwaj</h1>
-        <p><em>National Institute of Technology Karnataka - Suratkal</em></p>
+        <p><em>National Institute of Technology Karnataka - Surathkal</em></p>
         <p>Information Technology Student</p>
       </td>
     </tr>
